Added a new app for the blog posts along with the associated view for the detailed information about a blog post.

--- a/blog/core/templates/core/base.html
+++ b/blog/core/templates/core/base.html
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="/">
-                    <strong>Django based blog</strong>>
+                    <strong>Robert's blog</strong>>
                 </a>
                 <span class="navbar-burger burger" data-target="navbarMenu">
                     <span></span>
@@ -77,7 +77,7 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
-                <strong>Copyright (c) 2022 Django based blog</strong>
+                <strong>Copyright (c) 2022 Robert Purtuc</strong>
             </p>
         </div>
     </footer>
