--- a/blog/blog_post/templates/blog_post/category.html
+++ b/blog/blog_post/templates/blog_post/category.html
@@ -1,12 +1,12 @@
 {% extends "core/base.html" %}
-{% block title %}Home | {% endblock %}
+{% block category.title %} | {% endblock %}
 {% block content %}
 <section class="hero ">
     <div class="hero-body">
         <section class="section">
             <div class="columns">
                 <div class="column is-8 is-offset-2">
-                {% for post in posts %}
+                {% for post in category.posts.all %}
                     <div class="content is-medium">
                         <a href="{% url "post_detail" post.category.slug post.slug %}"
                         <h2 class="subtitle is-4">{{ post.created_at|date:'d-m-Y' }}</h2>
