--- a/blog/core/templates/core/frontpage.html
+++ b/blog/core/templates/core/frontpage.html
@@ -11,6 +11,11 @@
                         <a href="{% url "post_detail" post.category.slug post.slug %}"
                         <h2 class="subtitle is-4">{{ post.created_at|date:'d-m-Y' }}</h2>
                         <h1 class="title">{{ post.title }}</h1>
+                        {% if post.image %}
+                            <figure class="image">
+                                <img src="{{ post.image.url }}">
+                            </figure>
+                        {% endif %}
                         <p> {{ post.intro }}</p>
                     </div>
                     {% endfor %}
