--- a/blog/core/templates/core/base.html
+++ b/blog/core/templates/core/base.html
@@ -11,14 +11,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href={% static "favicon.png" %}> 
-    
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">  
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js">
+     </script>
     <!-- FontAwesome JS-->
 	<script defer src={% static "/fontawesome/js/all.min.js" %}></script>
     
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href={% static "/css/theme-3.css"%}>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/styles/monokai-sublime.min.css">
-
+    <!-- Javascript -->          
+    <script src={% static "plugins/popper.min.js"%}></script> 
+    <script src={% static "plugins/bootstrap/js/bootstrap.min.js"%}></script> 
 </head> 
 <body>
     
@@ -52,7 +57,7 @@
 					    <a class="nav-link" href={% url "logout" %}><i class="fa fa-user fa-fw me-2" aria-hidden="true"></i>Logout</a>
 					</li>
                     <li class="nav-item">
-					    <a class="nav-link" href={% url "login" %}><i class="fa fa-user fa-fw me-2" aria-hidden="true"></i>Modify posts</a>
+					    <a class="nav-link" href={% url "admin:index" %}><i class="fa fa-user fa-fw me-2" aria-hidden="true"></i>Admin Page</a>
 					</li>
                     {%else%}
                     <li class="nav-item">
@@ -63,7 +68,7 @@
 					    <a class="nav-link active" href={% url "front_page" %}><i class="fas fa-home fa-fw me-2"></i>Blog Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-					    <a class="nav-link" href="about.html"><i class="fas fa-user fa-fw me-2"></i>About Me</a>
+					    <a class="nav-link" href="https://www.robertpurtuc.dev"><i class="fas fa-user fa-fw me-2"></i>About Me</a>
 					</li>
 				</ul>
 				
@@ -77,13 +82,14 @@
     <div class="main-wrapper">
 	    <section class="cta-section theme-bg-light py-5">
 		    <div class="container text-center single-col-max-width">
-			    <h2 class="heading">DevBlog - A Blog Template Made For Developers</h2>
-			    <div class="intro">Welcome to my blog. Subscribe and get my latest blog post in your inbox.</div>
+			    <h2 class="heading"> A blog made by a developer for developers</h2>
+			    <div class="intro">Subscribe to receive awesome coding articles <i class="fas fa-rocket"></i></div>
 			    <div class="single-form-max-width pt-3 mx-auto">
-				    <form class="signup-form row g-2 g-lg-2 align-items-center">
-	                    <div class="col-12 col-md-9">
-	                        <label class="sr-only" for="semail">Your email</label>
-	                        <input type="email" id="semail" name="semail1" class="form-control me-md-1 semail" placeholder="Enter email">
+				    <form method="POST" class="signup-form row g-2 g-lg-2 align-items-center">
+	                    {% csrf_token %}
+                        <div class="col-12 col-md-9">
+	                        <label class="sr-only" for="sendemail">Your email</label>
+	                        <input type="email" id="sendemail" name="sendemail" class="form-control me-md-1 sendemail" placeholder="Enter email">
 	                    </div>
 	                    <div class="col-12 col-md-2">
 	                        <button type="submit" class="btn btn-primary">Subscribe</button>
@@ -95,7 +101,6 @@
         
         <section class="blog-list px-3 py-5 p-md-5">
             <div class="container single-col-max-width">
-                <div id="summernote">
                 {%block content%}
                 {%endblock%}
             </div>
@@ -111,11 +116,5 @@
     
     </div><!--//main-wrapper-->
        
-    <!-- Javascript -->          
-    <script src={% static "plugins/popper.min.js"%}></script> 
-    <script src={% static "plugins/bootstrap/js/bootstrap.min.js"%}></script> 
-
-    
-
 </body>
 </html> 
