--- a/blog/contact/templates/contact/contact.html
+++ b/blog/contact/templates/contact/contact.html
@@ -45,6 +45,17 @@
                             </div>
                         </div>
                     </form>
+                </br>
+                    {% if messages %}
+                        {% for msg in messages %}
+                            <div class="alert alert-danger alert-dismissable text-center">
+                                <button type="button"
+                                    <i class="fa fa-exclamation-circle"></i>
+                                </button>
+                                {{msg.message}}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                 </div>
                 </div>
             </div>
