--- a/blog/blog_post/templates/blog_post/detail.html
+++ b/blog/blog_post/templates/blog_post/detail.html
@@ -6,7 +6,7 @@
      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/styles/monokai-sublime.min.css">
 
 
-   {%block content%} 
+   {%block content%}
    <article class="blog-post px-3 py-5 p-md-5">
     <div class="container single-col-max-width">
         <header class="blog-post-header">
@@ -21,10 +21,79 @@
                 <a><img class="img-fluid" src={{post.image.url}}></a>
                 {% endif %}
             </figure>
-           <p>{{ post.body|safe}}</p> 
-            <pre>
+           <p>{{ post.body|safe}}</p>
+        </div>
+
+    </div>
+    <br>
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-14 col-lg-14">
+          <div class="card shadow-0 border" style="background-color: #f0f2f5;">
+              {% for comment in post.comments.all%}
+            <div class="card-body p-4">
+              <div class="card mb-4">
+                <div class="card-body">
+                  <p>{{ comment.body }}</p>
+      
+                  <div class="d-flex justify-content-between">
+                    <div class="d-flex flex-row align-items-center">
+                        <i class="fa fa-user fa-fw me-2" aria-hidden="true"></i>
+                      <p class="small mb-0 ms-2">{{ comment.name }}</p>
+                    </div>
+                    <div class="d-flex flex-row align-items-center">
+                      <p class="small text-muted mb-0">{{ comment.created_at|timesince }} ago</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            {%endfor%}
+          </div>
+
+          <br>
+          {% if not user.is_authenticated%}
+          <form action="" method=POST>
+              {% csrf_token %}
+              <div class="row g-3">
+                  <div class="col-md-6">
+                      <div class="form-floating">
+                          <input type="text" class="form-control" id="comment_name" name="name" placeholder="Your Name">
+                          <label for="comment_name">Your Name</label>
+                      </div>
+                  </div>
+                  <div class="col-md-6">
+                      <div class="form-floating">
+                          <input type="email" class="form-control" id="comment_email" name="email" placeholder="Your Email">
+                          <label for="comment_email">Your Email</label>
+                      </div>
+                  </div>
+                  <div class="col-12">
+                      <div class="form-floating">
+                          <textarea class="form-control" placeholder="Leave a message here" id="comment_message" name="body" style="height: 150px"></textarea>
+                          <label for="comment_message">Message</label>
+                      </div>
+                  </div>
+                  <div class="col-12 text-center">
+                      <button class="btn btn-primary"  input type="submit">Add a comment</button>
+                  </div>
+              </div>
+          </form>
+        </div>
+      </div>
+       {% else %}
+           <div class="col text-center">
+              <a class="btn btn-primary" input type="submit" href={% url "edit_blog_post" post.category.slug post.slug %} role="button">Edit this post</a>
+            </div>
+      <form name="deletePost" action={% url "delete_blog_post" post.category.slug post.slug %} method=POST>
+        {% csrf_token %}
+          <div class="col text-center">
+            <button input type="submit" class="btn btn-primary">Delete post</button>
+          </div>
+        </form>
+      {%endif%}
     {%endblock%}
+    
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/highlight.min.js"></script>
     <script src="/js/blog.js"></script> 
 </body>
-</html> 
+</html>
