--- a/blog/core/templates/core/base.html
+++ b/blog/core/templates/core/base.html
@@ -59,6 +59,9 @@
                     <li class="nav-item">
 					    <a class="nav-link" href={% url "admin:index" %}><i class="fa fa-user fa-fw me-2" aria-hidden="true"></i>Admin Page</a>
 					</li>
+                    <li class="nav-item">
+					    <a class="nav-link active" href={% url "add_blog_post" %}><i class="fa-solid fa-file-pen"></i>Add blog post <span class="sr-only">(current)</span></a>
+					</li>
                     {%else%}
                     <li class="nav-item">
 					    <a class="nav-link" href={% url "login" %}><i class="fa fa-user fa-fw me-2" aria-hidden="true"></i>Login</a>
